--- a/requirements.txt
+++ b/requirements.txt
@@ -9,9 +9,10 @@ isort==4.2.15
 itsdangerous==0.24
 Jinja2==2.10
 lazy-object-proxy==1.3.1
-Markdown==2.6.10
+Markdown==2.6.11
 MarkupSafe==1.0
 PyYAML==3.12
+six==1.11.0
 visitor==0.1.3
-Werkzeug==0.13
+Werkzeug==0.14.1
 wrapt==1.10.11
