--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,18 @@
 astroid==1.6.0
-click==6.7
-dominate==2.3.1
-Flask==0.12.2
+Click==7.0
+dominate==2.3.5
+Flask==1.0.2
 Flask-Bootstrap==3.3.7.1
-Flask-FlatPages==0.6
-gunicorn==19.7.1
+Flask-FlatPages==0.7.0
+Frozen-Flask==0.15
+gunicorn==19.9.0
 isort==4.2.15
-itsdangerous==0.24
+itsdangerous==1.1.0
 Jinja2==2.10
 lazy-object-proxy==1.3.1
-Markdown==2.6.11
-MarkupSafe==1.0
-PyYAML==3.12
+Markdown==3.0.1
+MarkupSafe==1.1.0
+PyYAML==3.13
 six==1.11.0
 visitor==0.1.3
 Werkzeug==0.14.1
